--- a/_posts/2019-09-11-test-post-5.md
+++ b/_posts/2019-09-11-test-post-5.md
@@ -5,6 +5,7 @@ category: "Goofy Shit"
 author: "Newsy McNewsface"
 excerpt: "Lorem ipsum dolor amet meh yr keytar, irony tbh semiotics cred adaptogen biodiesel glossier plaid. Quinoa +1 pork belly, bespoke kinfolk ramps vaporware keytar street art slow-carb keffiyeh. Keffiyeh waistcoat gochujang ramps narwhal, art party keytar kogi salvia twee ethical tumeric sartorial etsy hexagon. Migas brunch everyday carry tumeric poutine, taxidermy kale chips biodiesel schlitz freegan activated charcoal air plant subway tile knausgaard."
 img: "fikri-rasyid-EF-QrtA8nkQ-unsplash.jpg"
+thumb: "rsz_fikri-rasyid-ef-qrta8nkq-unsplash.jpg"
 imgcredit: "Photo by Fikri Rasyid on Unsplash"
 alt: "A smiling happy toilet paper dispenser"
 ---
