Ready for production

--- a/_posts/2019-09-11-test-post-4.md
+++ b/_posts/2019-09-11-test-post-4.md
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title:  "Lorem ipsum dolor amet meh yr keytar, irony tbh semiotics cred adaptogen biodiesel glossier plaid. Quinoa +1 pork belly, bespoke kinfolk ramps vaporware"
 category: "Goofy Shit"
 author: "Newsy McNewsface"
