--- a/_posts/2019-09-16-test-post-10.md
+++ b/_posts/2019-09-16-test-post-10.md
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title:  "2020 Dem Candidates Personally Seizing Assault Rifles From Republicans"
 category: "Conservative Shit"
 author: "Newsy McNewsface"
