Add to first article

--- a/_posts/2019-09-16-trump-tp.md
+++ b/_posts/2019-09-16-trump-tp.md
@@ -6,7 +6,7 @@ author: "Newsy McNewsface"
 author_title: "Senior Enlightenment Correspondent"
 excerpt: "Screams were heard this morning from a toilet the President was using. After initial alarm, it was discovered that the President's usual supply of gold foil sheets had been forgotten, and the POTUS accidentally used regular toilet tissue."
 img: "smiling-toilet-tissue-dispenser.jpg"
-imgcredit: "Photo by Aaron Burden on Unsplash"
+imgcredit: "Photo by Fikri Rasyid on Unsplash"
 alt: "US flag"
 ---
 
@@ -17,3 +17,11 @@ Screams were heard this morning from a toilet the President was using. After ini
 > *&ldquo;Disgusting! This nasty stuff for **poor people** touched my ass! Someone's getting **fired**! Who did this?&rdquo;<br><br>&mdash;President Donald Trump*
 
 Normally, toilets in an area the President might be in are stocked with thin gold foil sheets, which the President uses as toilet tissue. Some staffer is likely in hot water, as this was unfortunately forgotten this morning, to dramatic result.
+
+## &ldquo;Look At My Asshole!&rdquo;
+
+Mr. Trump came shambling out of the bathroom at a good clip for an elderly man with his pants around his ankles, screaming at aides he found in a conference room. &ldquo;Look at my asshole!&rdquo; he cried, clutching at the hair of the nearest aide and thrusting their head towards his derriere. &ldquo;This asshole is **gold,** motherfuckers, **who** forgot to stock my gold shit tickets?&rdquo;
+
+By this time, startled Secret Service agents had begun scrambling into the room, guns drawn, alarmed by the commotion. It took some time, but eventually the agents understood the situation and retreated to their posts.
+
+Aides eventually secured the gold foil toilet tissue and the President finished his constitutional and sent a tweet describing the incident as a terrorist plot.
