Change Newsy to Newsie to match domain

--- a/_posts/2019-09-16-trump-tp.md
+++ b/_posts/2019-09-16-trump-tp.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Trump Accidentally Uses Regular Toilet Tissue Instead Of Gold Foil Sheets"
 category: "Goofy Shit"
-author: "Newsy McNewsface"
+author: "Newsie McNewsface"
 author_title: "Senior Enlightenment Correspondent"
 excerpt: "Screams were heard this morning from a toilet the President was using. After initial alarm, it was discovered that the President's usual supply of gold foil sheets had been forgotten, and the POTUS accidentally used regular toilet tissue."
 img: "smiling-toilet-tissue-dispenser.jpg"
