Minor fixes, new article

--- a/_posts/2019-09-16-trump-tp.md
+++ b/_posts/2019-09-16-trump-tp.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Trump Accidentally Uses Regular Toilet Tissue Instead Of Gold Foil Sheets"
-category: "Goofy Shit"
+category: "Liberal Shit"
 author: "Newsie McNewsface"
 author_title: "Senior Enlightenment Correspondent"
 excerpt: "Screams were heard this morning from a toilet the President was using. After initial alarm, it was discovered that the President's usual supply of gold foil sheets had been forgotten, and the POTUS accidentally used regular toilet tissue."
@@ -12,7 +12,7 @@ alt: "US flag"
 
 ## Screams Heard From The Bathroom
 
-Screams were heard this morning from a toilet the President was using. After initial alarm, it was discovered that the President's usual supply of gold foil sheets had been forgotten, and the POTUS accidentally used regular toilet paper.
+Screams were heard this morning from a bathroom the President was using. After initial alarm, it was discovered that the President's usual supply of gold foil sheets had been forgotten, and the POTUS accidentally used regular toilet paper.
 
 > *&ldquo;Disgusting! This nasty stuff for **poor people** touched my ass! Someone's getting **fired**! Who did this?&rdquo;<br><br>&mdash;President Donald Trump*
 
