Add alt og meta tag

--- a/_posts/2019-09-16-trump-tp.md
+++ b/_posts/2019-09-16-trump-tp.md
@@ -7,7 +7,7 @@ author_title: "Senior Enlightenment Correspondent"
 excerpt: "Screams were heard this morning from a toilet the President was using. After initial alarm, it was discovered that the President's usual supply of gold foil sheets had been forgotten, and the POTUS accidentally used regular toilet tissue."
 img: "smiling-toilet-tissue-dispenser.jpg"
 imgcredit: "Photo by Fikri Rasyid on Unsplash"
-alt: "US flag"
+alt: "Smiling toilet tissue dispenser"
 ---
 
 ## Screams Heard From The Bathroom
